[package]
name = "line-column"
version = "0.1.3"
edition = "2021"

description = "Simple calculate lines and columns of str index"
keywords = ["no_std", "line", "column", "lines", "col"]
categories = ["no-std", "no-std::no-alloc"]

license = "MIT"
readme = "README.md"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/line-column-rs"

[dependencies]
