[package]
name = "line-column"
version = "0.2.0"
edition = "2021"

description = "Simple calculate lines and columns of str index"
keywords = ["no_std", "line", "column", "lines", "col"]
categories = ["no-std", "no-std::no-alloc"]

license = "MIT"
readme = "README.md"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/line-column-rs"

[features]
span = ["text-size"]

[dependencies]
text-size = { version = "1.1.1", optional = true }
