[package]
name = "line-column"
version = "0.3.1"
edition = "2021"

description = "Simple calculate lines and columns of str index"
keywords = ["no_std", "line", "column", "lines", "col"]
categories = ["no-std"]

license = "MIT"
readme = "README.md"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/line-column-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
span = ["text-size"]
sync = []

[dependencies]
text-size = { version = "1.1.1", optional = true }
